--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 plugins {
-	id 'java'
-	id 'org.springframework.boot' version '2.1.4.RELEASE'
-        id "com.arenagod.gradle.MybatisGenerator" version "1.4"
+  	id 'java'
+	  id 'org.springframework.boot' version '2.1.4.RELEASE'
+    id "com.arenagod.gradle.MybatisGenerator" version "1.4"
 }
 
-
 repositories {
-        google()
-        jcenter()
-	mavenCentral()
+    google()
+    jcenter()
+	  mavenCentral()
 }
 
 apply plugin: 'io.spring.dependency-management'
@@ -38,7 +37,8 @@ mybatisGenerator {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-web'
+      	implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-devtools'
         implementation 'org.springframework.boot:spring-boot-starter-jdbc'
         implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:+'
         implementation 'io.springfox:springfox-swagger2:+'
